--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ html,body{
 }
 .card-hotel{
     flex: 1 150px;
-    padding: 2px 5px 2px 5px;
+    margin-top: 10px;
 }
 
 footer{
@@ -23,4 +23,5 @@ footer{
 
 .btn-reserva{
     width: 100%;
+    border-radius: 0px;
 }
