--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html,body{
     height: 100%;
 }
 .jumbotron {
-    background-color: aliceblue;
+    background-color: #f0f8ff;
     color: black;
 }
 .card-hotel{
