--- a/css/styles2.less
+++ b/css/styles2.less
@@ -1,19 +1,18 @@
-//$bgcolor: #f0f8ff;
-$bgcolor: #f0f8ff;
-@mixin margenes($top,$bottom) {
-    margin-top: $top;
-    margin-bottom: $bottom;
+@bgcolor: #f0f8ff;
+.margenes(@top:0px,@bottom:0px){
+    margin-top: @top;
+    margin-bottom: @bottom;
 }
 html,body{
     height: 100%;
 }
 .jumbotron {
-    background-color:$bgcolor;
+    background-color:@bgcolor;
     color: black;
 }
 .card-hotel{
     flex: 1 150px;
-    @include margenes(10px, 0px);
+    .margenes(10px, 0px);
 }
 
 footer{
@@ -21,8 +20,8 @@ footer{
     bottom: 0;
     width: 100%;
     padding: 0px 10px 0 10px;
-    background-color: $bgcolor;
-   @include margenes(10px, 0px);
+    background-color: @bgcolor;
+   .margenes(10px, 0px);
 
 }
 
